# problem-sets

./: .gitignore  CHANGELOG.rst  README.rst  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: linter.yml  pytest.yml  run_tests.yml  sonarcloud.yml  tests.yml  type_check.yml
docs/: conf.py  conv_store.txt  index.txt  primes.txt  sequences.txt  sorting.txt
src/FindSquare/: square.py
src/atm/: __init__.py  func.py
src/basics/scripts/: bartender.py  demo_mutable.py
src/bisearch/: __init__.py  prefix.py
src/calc/: __init__.py  func.py
src/chess/: __init__.py  func.py  piece.py  symbols.py
src/conv_store/: __init__.py  challenge.rst  models.py
src/datasets/: __init__.py  bricks.py  filters.py  flatten.py  func.py  students.py
src/dynamic/: memoization.py  tabulation.py
src/geom/scripts/: shape_name.py  triangle_classification.py  two_points_dist.py
src/primes/: __init__.py  func.py
src/quiz/: __init__.py  func.py
src/search/: __init__.py  func.py
src/sequences/: __init__.py  func.py
src/sorting/: __init__.py  func.py
src/vowels/: checkvowels.py
src/wrw_game/: __main__.py  challenge.rst  engine.py  enums.py  exceptions.py  loggers.py  models.py  settings.py
src/wtk/: __main__.py  challenge.rst  engine.py  enums.py  exceptions.py  models.py  settings.py
tests/FindSquare/: test_square.py
tests/atm/: func_test.py
tests/bisearch/: conftest.py  test_prefix.py
tests/bisearch/fixtures/: strings.txt
tests/calc/: func_test.py  test_func.py
tests/chess/: func_test.py  piece_test.py  test_func.py  test_models.py  test_pieces.py
tests/conv_store/: models_test.py  test_models.py
tests/datasets/: bricks_test.py  conftest.py  filters_test.py  flatten_test.py  func_test.py  students_test.py
tests/datasets/fixtures/: ds_lg_f3.csv  ds_lg_f4.csv  ds_sm.csv  ds_sm_f1.csv  ds_sm_f2.csv  ds_sm_f3.csv  ds_sm_f4.csv  ds_sm_f5.csv  filter_1.csv  filter_2.csv  filter_5.csv
tests/dynamic/: memoization_test.py  tabulation_test.py  test_memoization.py  test_tabulation.py
tests/primes/: conftest.py  func_test.py
tests/quiz/: conftest.py  func_test.py
tests/quiz/fixtures/: quiz.csv
tests/search/: func_test.py
tests/sequences/: func_test.py  test_func.py
tests/sorting/: conftest.py  func_test.py  test_func.py
tests/vowels/: test_checkvowels.py
tests/wrw_game/integration/: test_models.py
tests/wrw_game/unit/: fight_test.py  models_test.py  test_fight.py  test_models.py
tests/wtk/integration/: models_test.py
tests/wtk/unit/: fight_test.py  models_test.py
