[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "problem-sets"
version = "2022.11.dev"
description = "python training course - problem sets"
license = "MIT"
authors = [
    "Serhii Horodilov <sgorodil@gmail.com>"
]
maintainers = [
    "Serhii Horodilov <sgorodil@gmail.com>"
]
readme = "README.rst"
repository = "https://github.com/edu-python-course/problem-sets"
keywords = [
    "python",
    "challenge",
    "educational",
    "tutorial",
    "training"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.9"
pytest-cov = "^4.0.0"
mypy = "^0.991"
pylint = "^2.15.5"
tox = "^3.27.1"

[tool.poetry.dev-dependencies]
Sphinx = "^5.3.0"

[tool.pytest.ini_options]
addopts = "--cov=src --verbose"
testpaths = ["tests"]
