[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "problem-sets"
version = "2023.08.1"
description = "Challenges and solutions for the Python training course"
license = "MIT"
authors = [
    "Serhii Horodilov <sgorodil@gmail.com>"
]
maintainers = [
    "Serhii Horodilov <sgorodil@gmail.com>"
]
readme = "README.rst"
repository = "https://github.com/edu-python-course/problem-sets"
keywords = [
    "python",
    "challenge",
    "educational",
    "tutorial",
    "training",
    "basic",
    "oop",
    "dynamic",
    "programming",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
]
packages = [
    { include = "atm", from = "src" },
    { include = "bisearch", from = "src" },
    { include = "calc", from = "src" },
    { include = "chess", from = "src" },
    { include = "conv_store", from = "src" },
    { include = "datasets", from = "src" },
    { include = "dynamic", from = "src" },
    { include = "geom", from = "src" },
    { include = "primes", from = "src" },
    { include = "sequences", from = "src" },
    { include = "sorting", from = "src" },
    { include = "wtk", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
mypy = "^1.2.0"
pylint = "^2.17.2"
tox = "^4.4.12"

[tool.poetry.scripts]
wtk = "wtk.__main__:run"

[tool.pytest.ini_options]
addopts = "--cov=src --verbose"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*__init__*",
    "*__main__*",
    "**/scripts/**",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__"
]

[tool.mypy]
files = "src,tests"

[tool.pylint."MASTER"]
fail-under = 8
ignore = ["tests"]
persistent = true

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 79

[tool.pylint."REFACTORING"]
max-nested-blocks = 3

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 4.0
envlist = py39, py310, py311, mypy, pylint
isolated_build = true
skip_missing_interpreters = true

[gh-actions]
python =
    3.9: py39
    3.10: py310, mypy, pylint
    3.11: py311

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest

[testenv:mypy]
deps =
    mypy
commands =
    mypy src

[testenv:pylint]
deps =
    pylint
commands =
    pylint src
"""
